# ViewSplat-RT

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: evaluation_index_re10k_10view.json  evaluation_index_re10k_5view.json
config/: main.yaml
config/dataset/view_sampler_dataset_specific_config/: evaluation_dl3dv.yaml
config/experiment/spf_viewsplat/: dl3dv.yaml
config/experiment/spfv2_viewsplat/: re10k_eval.yaml
config/model/encoder/: spfv2_viewsplat.yaml  spfv2l_viewsplat.yaml
scripts/: prepare_diff_gauss_pose.py
src/: eval_pose.py  main.py  realtime_two_camera.py  runtime.py
src/loss/: loss_point.py
src/misc/: cam_utils.py
src/model/: model_wrapper.py
src/model/decoder/: cuda_splatting.py
src/model/encoder/: encoder_spfv2_viewsplat.py  encoder_spfv2l_viewsplat.py
src/model/encoder/backbone/: backbone_masked_croco.py
src/model/encoder/backbone/croco/: blocks.py
src/model/encoder/backbone/croco/curope/: curope2d.py
src/model/encoder/backbone/vggt/utils/: rotation.py
src/model/encoder/common/: gaussians.py
