[project]
name = "viewsplat"
version = "0.1.0"
description = "ViewSplat: View-Adaptive 3D Gaussian Splatting for Feed-Forward Synthesis"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "attrs==24.3.0",
    "beartype==0.19.0",
    "cffi==1.15.1",
    "charset-normalizer==2.1.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "colorspacious==1.1.2",
    "contourpy==1.3.1",
    "curope",
    "cycler==0.12.1",
    "dacite==1.8.1",
    "decorator==4.0.2",
    "diff-gauss-pose",
    "e3nn==0.5.5",
    "einops==0.8.0",
    "filelock==3.12.2",
    "fonttools==4.55.3",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "hf-xet==1.1.7",
    "huggingface-hub==0.30.2",
    "hydra-core==1.3.2",
    "idna==3.4",
    "imageio==2.36.1",
    "imageio-ffmpeg==0.5.1",
    "iopath==0.1.10",
    "jaxtyping==0.2.36",
    "jinja2==3.1.2",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "lightning",
    "lightning-utilities",
    "lpips==0.1.4",
    "markupsafe==2.1.1",
    "matplotlib==3.10.0",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "networkx==3.1",
    "ninja",
    "numpy==2.2.0",
    "omegaconf==2.3.0",
    "opencv-python==4.10.0.84",
    "opt-einsum==3.4.0",
    "opt-einsum-fx==0.1.4",
    "packaging==24.0",
    "pathspec==0.12.1",
    "pillow==10.4.0",
    "platformdirs==3.10.0",
    "plyfile==1.1",
    "portalocker==3.0.0",
    "proglog==0.1.10",
    "propcache==0.2.1",
    "protobuf==5.29.1",
    "pycparser==2.21",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pyparsing==3.2.0",
    "python-dateutil==2.8.2",
    "pyyaml==6.0",
    "requests==2.31.0",
    "roma==1.5.1",
    "safetensors==0.4.5",
    "scikit-image==0.25.0",
    "scikit-video==1.1.11",
    "scipy==1.14.1",
    "sentry-sdk==2.19.2",
    "setuptools",
    "six==1.16.0",
    "smmap==5.0.1",
    "svg.py==1.5.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "timm==1.0.12",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "tqdm",
    "triton",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "urllib3==2.0.3",
    "viser>=1.0.30",
    "wadler-lindig==0.1.7",
    "wandb==0.19.2",
    "wheel",
    "yarl==1.18.3",
]

[tool.uv]
package = false
compile-bytecode = true
no-build-isolation-package = ["curope", "diff-gauss-pose"]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
curope = { path = "src/model/encoder/backbone/croco/curope" }
diff-gauss-pose = { path = ".uv-local/diff-gaussian-rasterization" }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.uv.extra-build-dependencies]
curope = [{ requirement = "torch", match-runtime = true }, "setuptools", "wheel"]
diff-gauss-pose = [{ requirement = "torch", match-runtime = true }, "setuptools", "wheel"]

[[tool.uv.dependency-metadata]]
name = "curope"
version = "0.0.0"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "diff-gauss-pose"
version = "1.0.0.0"
requires-dist = []

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
